src/objects/Shopping_Cart__c.object
<CustomObject>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Shopping Cart</label>
    <nameField>
        <label>Shopping Cart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shopping Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>